--- a/examples/vanilla-css-gallery.css
+++ b/examples/vanilla-css-gallery.css
@@ -3,24 +3,53 @@
  * This file (base.sass) contains the minimum CSS
  * necessary for just the basic functionality.
  */
-.gallery-nav { position: relative; padding: 0; }
+.gallery-nav {
+  position: relative;
+}
 
-.gallery-item { position: absolute; top: 0; right: 0; bottom: 0; left: 0; opacity: 0; z-index: -1; }
-.gallery-item:target { opacity: 1; position: fixed; z-index: 2; }
-.gallery-item:target ~ .gallery-nav { z-index: 3; }
-.gallery-item:target ~ .gallery-nav .gallery-close { display: block; }
+.gallery-close {
+  display: none;
+}
 
-.gallery-close { display: none; }
+.gallery-item {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  z-index: -1;
+}
+.gallery-item:target {
+  opacity: 1;
+  position: fixed;
+  z-index: 2;
+}
+.gallery-item:target ~ .gallery-nav {
+  z-index: 3;
+}
+.gallery-item:target ~ .gallery-nav .gallery-close {
+  display: block;
+}
 
 /*!
  * NOTE
  * The following CSS does not influence the gallery functionality.
  * It just makes the example prettier.
  */
-body { padding: 10vw; }
+body {
+  padding: 10vw;
+}
 
-img { max-width: 100%; }
+img {
+  max-width: 100%;
+}
 
-ul { list-style: none; }
+ul {
+  list-style: none;
+  padding: 0;
+}
 
-li { display: inline-block; }
+li {
+  display: inline-block;
+}
