--- a/sass/normalize.scss
+++ b/sass/normalize.scss
@@ -423,3 +423,26 @@ td,
 th {
   padding: 0;
 }
+
+/*!
+ * NOTE
+ * The following CSS does not influence the gallery functionality.
+ * It just makes the example prettier.
+ */
+
+body {
+  padding: 10vw;
+}
+
+img {
+  max-width: 100%;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  display: inline-block;
+}
