--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,13 +1,10 @@
 /*!
  * NOTE
- * Example styles of what you could create with this gallery.
+ * Extra example styles of what you could create with this gallery.
  */
 
 .gallery-nav
 	border-radius: 5px
-
-.gallery-close
-	display: none
 
 .gallery-item
 	background: black
@@ -27,7 +24,7 @@
 			position: fixed
 
 			li
-				margin: 0
+				margin: 0 5px 0 0
 
 			img
 				border: 2px solid white
