--- a/examples/css/normalize.css
+++ b/examples/css/normalize.css
@@ -393,3 +393,25 @@ td,
 th {
   padding: 0;
 }
+
+/*!
+ * NOTE
+ * The following CSS does not influence the gallery functionality.
+ * It just makes the example prettier.
+ */
+body {
+  padding: 10vw;
+}
+
+img {
+  max-width: 100%;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  display: inline-block;
+}
