--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,21 @@
  * NOTE
  * Extra example styles of what you could create with this gallery.
  */
-.gallery-nav {
+.with-styles .gallery-nav {
   border-radius: 5px;
 }
 
-.gallery-item {
+.with-styles .gallery-item {
   background: black;
   background: rgba(0, 0, 0, 0.85);
   -webkit-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-.gallery-item img {
+.with-styles .gallery-item img {
   max-width: 90vw;
   max-height: 90vh;
 }
-.gallery-item:target ~ .gallery-nav {
+.with-styles .gallery-item:target ~ .gallery-nav {
   top: 25px;
   left: 50%;
   -webkit-transform: translateX(-50%);
@@ -25,13 +25,13 @@
   text-align: center;
   position: fixed;
 }
-.gallery-item:target ~ .gallery-nav li {
+.with-styles .gallery-item:target ~ .gallery-nav li {
   margin: 0 5px 0 0;
 }
-.gallery-item:target ~ .gallery-nav img {
+.with-styles .gallery-item:target ~ .gallery-nav img {
   border: 2px solid white;
 }
-.gallery-item:target ~ .gallery-nav .gallery-close {
+.with-styles .gallery-item:target ~ .gallery-nav .gallery-close {
   font-size: 20px;
   font-weight: bold;
   background: rgba(0, 0, 0, 0.85);
@@ -41,7 +41,7 @@
   left: 105%;
   top: 0;
 }
-.gallery-item img {
+.with-styles .gallery-item img {
   margin: auto;
   border: 4px solid white;
   position: absolute;
@@ -52,7 +52,7 @@
   transform: translate(-50%, -50%);
 }
 
-.gallery-close a {
+.with-styles .gallery-close a {
   color: white;
   text-decoration: none;
   padding: 5px;
