--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,7 +9,7 @@
 .gallery-item
 	background: black
 	background: rgba(black, .85)
-	transition: all .2s ease-out
+	transition: opacity .3s ease-out
 
 	img
 		max-width: 90vw
