Move processed CSS to root folder, adjust examples accordingly.

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,7 @@
 /*!
  * NOTE
- * Extra example styles of what you could create with this gallery.
+ * These are extra example styles of what
+ * you could create with this gallery.
  */
 
 .gallery-nav
