--- a/css/vanilla-css-gallery.css
+++ b/css/vanilla-css-gallery.css
@@ -1,6 +1,6 @@
 /*!
  * NOTE
- * This file (base.sass) contains only the minimum gallery CSS
+ * This file contains only the minimum gallery CSS
  * necessary for just the basic functionality.
  */
 .gallery-nav {
