Small overall style changes.

--- a/sass/vanilla-css-gallery.sass
+++ b/sass/vanilla-css-gallery.sass
@@ -8,6 +8,9 @@
   // To be able to have a z-index
   position: relative
 
+  img
+    max-width: 150px
+
 .gallery-close
   // Hide closing cross initially
   display: none
