--- a/sass/vanilla-css-gallery.sass
+++ b/sass/vanilla-css-gallery.sass
@@ -5,18 +5,18 @@
  */
 
 .gallery-nav
-  // To be able to have a z-index
+  /* To be able to have a z-index: */
   position: relative
 
   img
     max-width: 150px
 
 .gallery-close
-  // Hide closing cross initially
+  /* Hide closing cross initially: */
   display: none
 
 .gallery-item
-  // Define the initial state
+  /* Define the initial state: */
   position: fixed
   top: 0
   right: 0
@@ -25,13 +25,13 @@
   opacity: 0
   z-index: -1
 
-  // When the image is active
+  /* When the image is active: */
   &:target
     opacity: 1
     z-index: 2
 
-    // Make the original image list also the gallery navigation
     & ~ .gallery-nav
+      /* Make the original image list also the gallery navigation: */
       z-index: 3
 
       .gallery-close
