--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
  * These are extra example styles of what
  * you could create with this gallery.
  */
+.gallery-nav img {
+  max-width: 150px;
+}
+
 .gallery-item {
   background: black;
   background: rgba(0, 0, 0, 0.85);
