--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,6 +4,9 @@
  * you could create with this gallery.
  */
 
+.gallery-nav img
+	max-width: 150px
+
 .gallery-item
 	background: black
 	background: rgba(black, .85)
